--- a/apps/seed/src/index.html
+++ b/apps/seed/src/index.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="https://unpkg.com/@clr/ui/clr-ui.min.css" />
   </head>
   <body>
-    <nx-vmware-root></nx-vmware-root>
+    <seed-root></seed-root>
   </body>
 </html>
